[tool.poetry]
name = "brightwheel"
version = "0.1.0"
description = "Export images and videos for attached account."
authors = ["Kevin Ramdath <kkramdath@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.scripts]
brightwheel-export = "brightwheel.export:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
